Migrate to prettier java code formatter